--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "pixi-ef-system",
+  "name": "pixi-extended-filter-system",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "pixi.js": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/preset-env": "^7.7.1"
   }
 }
