--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "main": "src/index.js",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "pixi.js": "^5.2.0"
   },
   "devDependencies": {
