--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/preset-env": "^7.7.1",
-    "babel-eslint": "^10.0.3"
+    "@pixi/eslint-config": "^1.0.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "typescript": "^3.8.3"
   }
 }
