--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixi-extended-filter-system",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "src/index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -13,6 +13,7 @@
     "@pixi/eslint-config": "^1.0.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "pixi.js": "^5.2.0"
   }
 }
