--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "pixi-extended-filter-system",
-  "version": "1.0.4",
-  "main": "src/index.js",
+  "version": "1.1.0",
+  "main": "lib/phase-filter-manager.cjs",
   "license": "MIT",
+  "bundle": "dist/phase-filter-manager.js",
+  "module": "src/index.js",
   "peerDependencies": {
     "pixi.js": "^5.2.0"
   },
@@ -11,9 +13,27 @@
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/preset-env": "^7.7.1",
     "@pixi/eslint-config": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "babel-eslint": "^10.0.3",
+    "canvas": "^2.6.1",
+    "chai": "^4.2.0",
+    "electron": "^8.2.0",
     "eslint": "^6.8.0",
-    "typescript": "^3.8.3",
-    "pixi.js": "^5.2.0"
+    "esm": "^3.2.25",
+    "floss": "^3.0.0",
+    "jsdom": "^16.2.1",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^7.1.1",
+    "node-canvas-webgl": "^0.2.6",
+    "pixi.js": "^5.2.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-glsl": "^1.3.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "sinon": "^9.0.1",
+    "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "test": "floss --path test/FilterPipe.test.js"
   }
 }
